Change staticpage models, home templete

--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -27,14 +27,22 @@
                 <div class="row">
                     <div class="col">
                         <br>
-                        {% if page.welcome_title %}
-                            <h1>{{ page.welcome_title }}</h1>
+                        {% if page.welcome_body %}
+                            {% for block in page.welcome_body %}
+                                {% if block.block_type == 'title' %}
+                                    <h1>{{ block.value }}</h1>
+                                {% endif %}
+                            {% endfor %}
                         {% else %}
                             <h1>{% trans "Welcome" %}</h1>
                         {% endif %}
 
                         {% if page.welcome_body %}
-                            <p class="font-weight-bold">{{ page.welcome_body }}</p>
+                            {% for block in page.welcome_body %}
+                                {% if block.block_type == 'content' %}
+                                    <p class="font-weight-bold">{{ block.value }}</p>
+                                {% endif %}
+                            {% endfor %}
                         {% else %}
                             <p class="font-weight-bold">{% trans  "Welcome to medborgarforskning.se – Sweden's portal for persons interested in learning about citizen science and how to get started in Sweden as well as those who have been involved for years. While this site uses the term citizen science it is more than this term. Citizen science is about researchers and the public cooperating to develop new knowledge. At medborgarforskning.se anyone who wants to learn more about citizen science can search for projects to participate in and contribute to the portal with their own knowledge and experience.<br><br> As a researcher, you can find information about the methodology of citizen science, get tips and inspiration to start your own projects, exchange experiences and make connections with other researchers and volunteers.You can also post your projects on the portal to reach different target groups.<br><br> If you're not a researcher, you can do exactly the same things as the researchers. Citizen science is for everyone." %}</p>
                         {% endif %}
@@ -44,14 +52,22 @@
             <div class="col-6 h" style="padding-left:25px;">
                 <div class="row">
                     <div class="col">
-                        {% if page.project_title %}
-                            <h1>{{ page.project_title }}</h1>
+                        {% if page.project_body %}
+                            {% for block in page.project_body %}
+                                {% if block.block_type == 'title' %}
+                                    <h1>{{ block.value }}</h1>
+                                {% endif %}
+                            {% endfor %}
                         {% else %}
                             <h1>{% trans "Projects" %}</h1>
                         {% endif %}
 
                         {% if page.project_body %}
-                            <p>{{ page.project_body }}</p>
+                            {% for block in page.project_body %}
+                                {% if block.block_type == 'content' %}
+                                    <p>{{ block.value }}</p>
+                                {% endif %}
+                            {% endfor %}
                         {% else %}
                             <p> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p>
                         {% endif %}
@@ -142,15 +158,24 @@
     <div class="custom-container ">
         <div class="row ml-0 main-page-box background-greenish-color">
             <div class="col-4 d-flex justify-content-center align-items-center">
-                {% if page.get_CitSciSE_title %}
-                    <h1>{{ page.get_CitSciSE_title }}</h1>
+                {% if page.get_CitSciSE_box %}
+                    {% for block in page.get_CitSciSE_box %}
+                        {% if block.block_type == 'title' %}
+                            <h1>{{ block.value }}</h1>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <h1>{% trans "Get involved with CitSciSE" %}</h1>
                 {% endif %}
             </div>
+
             <div class="col-8 d-flex justify-content-center align-items-center">
-                {%if page.get_CitSciSE_body %}
-                    <p class="mb-0">{{ page.get_CitSciSE_body }}</p>
+                {% if page.get_CitSciSE_box %}
+                    {% for block in page.get_CitSciSE_box %}
+                        {% if block.block_type == 'content' %}
+                            <p class="mb-0">{{ block.value }}</p>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <p class="mb-0">{% trans "If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content." %}</p>
                 {% endif %}
@@ -160,20 +185,32 @@
     <div class="custom-container">
         <div class="row ml-0">
             <div class="col h slider-color items-box">
-                {% if page.data_quality_box_title %}
-                    <h1>{{ page.data_quality_box_title }}</h1>
+                {% if page.data_box %}
+                    {% for block in page.data_box %}
+                        {% if block.block_type == 'title' %}
+                            <h1>{{ block.value }}</h1>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <h1> {% trans "Data Quality" %} </h1>
                 {% endif %}
 
-                {%if page.data_quality_box_subtitle %}
-                    <p class="font-weight-bold" >{{ page.data_quality_box_subtitle }}</p>
+                {%if page.data_box %}
+                    {% for block in page.data_box %}
+                        {% if block.block_type == 'subtitle' %}
+                            <p class="font-weight-bold" >{{ block.value }}</p>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <p class="font-weight-bold" >{% trans "Getting Started" %}</p>
                 {% endif %}
 
-                {% if page.data_quality_box_body %}
-                    <p class="text-justify ">{{ page.data_quality_box_body }}</p>
+                {% if page.data_box %}
+                    {% for block in page.data_box %}
+                        {% if block.block_type == 'content' %}
+                            <p class="text-justify ">{{ block.value }}</p>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <p class="text-justify ">{% trans "Some of the first questions in citizen science is can we trust the data and is the data of sufficient quality. Fundamental readings and resources on Data Quality, Data Standards and Technologies have been compiled in the resources to help address your question." %}</p>
                 {% endif %}
@@ -190,14 +227,22 @@
                 </div>
             </div>
             <div class="col h slider-color items-box">
-                {% if page.paper_box_title %}
-                    <h1>{{ page.paper_box_title }}</h1>
+                {% if page.paper_box %}
+                    {% for block in page.paper_box %}
+                        {% if block.block_type == 'title' %}
+                            <h1>{{ block.value }}</h1>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <h1>{% trans "Papers" %}</h1>
                 {% endif %}
 
-                {% if page.paper_box_subtitle %}
-                    <p class="font-weight-bold">{{ page.paper_box_subtitle }}</p>
+                {% if page.paper_box %}
+                    {% for block in page.paper_box %}
+                        {% if block.block_type == 'subtitle' %}
+                            <p class="font-weight-bold">{{ block.value }}</p>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <p class="font-weight-bold">{% trans "Recent papers" %}</p>
                 {% endif %}
@@ -208,20 +253,29 @@
 
             </div>
             <div class="col h slider-color items-box mr-0">
-                {% if page.CitSciSE_box_title %}
-                    <h1>{{ page.CitSciSE_box_title }}</h1>
+                {% if page.CitSciSE_box %}
+                    {% for block in page.CitSciSE_box %}
+                        {% if block.block_type == 'title' %}
+                            <h1>{{ block.value }}</h1>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <h1>{% trans "CitSciSE Community" %}</h1>
                 {% endif %}
 
-                {% if page.CitSciSE_box_subtitle %}
-                    <p class="font-weight-bold">{{ page.CitSciSE_box_subtitle }}</p>
+                {% if page.CitSciSE_box %}
+                    {% for block in page.CitSciSE_box %}
+                        {% if block.block_type == 'subtitle' %}
+                            <p class="font-weight-bold">{{ block.value }}</p>
+                        {% endif %}
+                    {% endfor %}
                 {% else %}
                     <p class="font-weight-bold">{% trans "Recent Blog Posts" %}<p>
                 {% endif %}
 
                 {% for blog in "citizen"|latest_blogs %}
-                    <p>{{ blog.published }}: <a href="http://example.com">{{blog}}</a></p>
+                    {{ blog.publishedDate }}
+                    <p>{{ blog.publishedDate }}: <a href="http://example.com">{{blog}}</a></p>
                 {% endfor %}
 
             </div>
