--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -247,10 +247,9 @@
                     <p class="font-weight-bold">{% trans "Recent papers" %}</p>
                 {% endif %}
 
-                {% for q in "citizen"|query_publications %}
-                    <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{q}}</a></p>
+                {% for q in 5|recent_publications %}
+                    <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{ q }}</a></p>
                 {% endfor %}
-
             </div>
             <div class="col h slider-color items-box mr-0">
                 {% if page.CitSciSE_box %}
@@ -273,9 +272,8 @@
                     <p class="font-weight-bold">{% trans "Recent Blog Posts" %}<p>
                 {% endif %}
 
-                {% for blog in "citizen"|latest_blogs %}
-                    {{ blog.publishedDate }}
-                    <p>{{ blog.publishedDate }}: <a href="http://example.com">{{blog}}</a></p>
+                {% for blog in 5|latest_blogs %}
+                    <p>{{ blog.publishedDate }}: <a href="{{ blog.get_absolute_url }}">{{ blog }}</a></p>
                 {% endfor %}
 
             </div>
