--- a/ArcsSystem/templates/staticpages/source_code.html
+++ b/ArcsSystem/templates/staticpages/source_code.html
@@ -9,9 +9,9 @@
     <div class="custom-container">
         <div class="row">
             <div class="col">
-                {% for instance in termpage %}
-                    <h1>{{ instance.terms_title}}</h1>
-                    <h1>{{ instance.terms_content|richtext }}</h1>
+                {% for instance in sourceodepage %}
+                    <h1>{{ instance.sourcecode_title}}</h1>
+                    <h1>{{ instance.sourcecode_content|richtext }}</h1>
                 {% endfor %}
             </div>
         </div>
