--- a/ArcsSystem/templates/projects/project_list.html
+++ b/ArcsSystem/templates/projects/project_list.html
@@ -75,34 +75,34 @@
 
                 <div class="row">
                     <div class="col Lato-font project-items-justify background-greenish-color">
-                        <p class="font-weight-bold"><a id="project-items-link" href="{% url 'projects:project_detail' project.pk %}">project {{forloop.counter}}: {{ project.name }}</a></p>
+                        <p class="font-weight-bold"><a id="project-items-link" href="{% url 'projects:project_detail' ProjectEntry.pk %}">project {{forloop.counter}}: {{ ProjectEntry.name }}</a></p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img class="mg-fluid w-100" src="{{project.image_dir}}" alt="{% trans 'Responsive image' %}"/>
+                        <img class="mg-fluid w-100" src="{{ProjectEntry.image_dir}}" alt="{% trans 'Responsive image' %}"/>
                     </div>
                 </div>
                 <div class="row Lato-font project-items-justify">
                     <div class="col project-item-details">
                         <p class="font-weight-bold">PROJECT FOCUS:</p>
-                        <p>{{project.aim}}</p>
+                        <p>{{ProjectEntry.aim}}</p>
                     </div>
                 </div>
                 <div class="row Lato-font">
                     <div class="col project-item-details">
                         <p class="font-weight-bold">DESCRIPTION:</p>
-                        <p>{{project.description|truncatewords:25}}</p>
+                        <p>{{ProjectEntry.description|truncatewords:25}}</p>
                     </div>
                 </div>
                 <div class="row Lato-font">
                     <div class="col project-item-details">
-                        <p class="font-weight-bold">STATUS: {{project.status}}</p>
+                        <p class="font-weight-bold">STATUS: {{ProjectEntry.status}}</p>
                     </div>
                 </div>
                 <div class="row Lato-font project-item-details">
                     <div class="col justify-content-center align-items-center project-keywords-btn">
-                        {% for keyword in project.keywords.all %}
+                        {% for keyword in ProjectEntry.keywords.all %}
                         <button class="btn projects-filter-buttons projects-keywords-buttons-font" type="button" name="button">
                             {{keyword}}
                         </button>
