--- a/ArcsSystem/templates/projects/project_submissionform.html
+++ b/ArcsSystem/templates/projects/project_submissionform.html
@@ -21,6 +21,7 @@
   <li>{% trans "The target audience of the project." %}</li>
   <li>{% trans "Your affiliation to the project as the person submitting the project." %}</li>
   <li>{% trans "Keywords for the project." %}</li>
+  <li>{% trans "ScienceType for the project." %}</li></li>
 </ul>
 <p>{% trans "Following submission your project will be reviewed before becoming visibile on the site and included in the metadata exchange. Review the citizen science assessment criteria for visiblity and exchange." %}</p>
 {% endif %}
