--- a/ArcsSystem/templates/workpackages/workpackages_list.html
+++ b/ArcsSystem/templates/workpackages/workpackages_list.html
@@ -2,10 +2,54 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
-
+{% load workpackages_extras %}
 {% block content %}
 
-<h1>{% trans "Arcs Resources" %}</h1>
+<h1 align="center">{% trans "Categories" %}</h1>
+<br>
+
+<hr>
+
+
+<div style="margin-right: 30px; margin-left: 30px">
+  <div class="row">
+
+  	{% for st in list_theme %}
+
+    <div class="col-3">
+
+    	{{st.0.name}}
+    	<br>
+    	<hr>
+    	<h5> About {{st.0.name}} :</h5>
+    	<div style="height: 130px">
+    	{{st.0.introduction}}
+    	</div>
+
+    	<hr>
+
+
+
+    	<h5>Themes</h5>
+    	{% for theme in st.1 %}
+
+    	<a href="{{theme.title}}/">{{theme.title|break_slug}}</a>
+    	<br>
+
+    	{% endfor %}
+
+    </div>
+
+    {% endfor %}
+
+
+  </div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
 
 <ul>
 {% for wp in object_list %}
