--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -14,15 +14,40 @@
 
 
 
-<h2>{{ theme.title|break_slug }}</h2>
+<h5 align="center"> Category : {{ theme.wp_parent}}</h5> 
+<h5 align="center"> Theme :  {{ theme.title|break_slug }}</h5> 
+
+
+
 
 <br>
+<br>
+<br>
+<div class="col-12" style="padding-right: 200px; padding-left: 200px; padding-bottom: 100px">
 
-<hr>
-{{ theme.body}}
-<hr>
+	<h5> About  {{ theme.title|break_slug }}</h5>
 
-<h2> Publ... </h2>
+	<hr>
+
+<!-- 	<span style = "font-family: Arial; font-size: px"> -->
+
+
+	{{ theme.body}}
+
+</div>
+
+
+<div class="col-12" style="padding-right: 200px; padding-left: 200px; padding-bottom: 100px">
+
+	<h5> Related publications</h5>
+	<hr>
+    {% for article in pubs %}
+	    <div class="search-list">
+	        <h2 class="search-list"> <a href="{{ article.get_absolute_url }}">{{ article.py }}. {{ article.title }}</a></h2>
+	    </div>
+	{% endfor %}
+</div>
+
 
 
 
@@ -33,13 +58,6 @@
 </div>
 
 
-
-<ul>
-    {% for theme in object_list %}
-        <li><a href="#">{{ theme.title }}</a></li>
-
-    {% endfor %}
-</ul>
 
 
 
