--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -14,8 +14,8 @@
 
 
 
-<h5 align="center"> Category : {{ theme.wp_parent}}</h5> 
-<h5 align="center"> Theme :  {{ theme.title|break_slug }}</h5> 
+<h5 align="center"> Category : {{ theme.wp_parent}}</h5>
+<h5 align="center"> Theme :  {{ theme.title|break_slug }}</h5>
 
 
 
@@ -32,7 +32,7 @@
 <!-- 	<span style = "font-family: Arial; font-size: px"> -->
 
 
-	{{ theme.body}}
+	{{ theme.body|safe}}
 
 </div>
 
