changed from slug to pk in url handling

--- a/ArcsSystem/templates/workpackages/workpackages_list.html
+++ b/ArcsSystem/templates/workpackages/workpackages_list.html
@@ -29,7 +29,7 @@
     	<h5>Themes</h5>
     	{% for theme in st.1 %}
 
-    	<a href="{{theme.title}}/">{{theme.title|break_slug}}</a>
+    	<a href="{{theme.id}}/">{{theme.title|break_slug}}</a>
     	<br>
 
     	{% endfor %}
